<resources>
    <string name="app_name">Note me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_temario">Temario</string>
    <string name="title_examenes">Exámenes</string>


    <string name="usuarios_registro">Registrarse</string>
    <string name="usuarios_login">Iniciar sesion</string>
    <string name="usuarios_title_password">Contraseña:</string>
    <string name="usuarios_title_mail">Correo:</string>
    <string name="usuarios_crearCuenta">Crear cuenta</string>


    <string name="CorreoError">Ingresa un correo valido</string>
    <string name="PsdError">La contraseña debe de ser mayor a 6 digitos</string>
    <string name="title_activity_tests">TestsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>